--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+@import "tailwindcss";
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
