--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,10 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
+* {
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
 
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
